--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,8 @@
-<h1>Hello World!</h1>
+{% extends "base.html" %}
+{% block title %}Index{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock %}
+{% block body %}
+    <h1>Hello World!</h1>
+{% endblock %}
