--- a/templates/user.html
+++ b/templates/user.html
@@ -1,1 +1,12 @@
-<h1>Hello, {{ name }}!</h1>
+{% extends "base.html" %}
+{% block title %}User{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock %}
+{% block body %}
+    {% if name %}
+        <h1>Hello, {{ name | capitalize }}!</h1>
+    {% else %}
+        <h1>Hello, Stranger!</h1>
+    {% endif %}
+{% endblock %}
