--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Index{% endblock %}
-{% block head %}
-    {{ super() }}
-{% endblock %}
-{% block body %}
-    <h1>Hello World!</h1>
+{% block content %}
+    <div class="container">
+        <div class="page-header">
+            <h1>Hello World!</h1>
+        </div>
+    </div>
 {% endblock %}
