--- a/templates/500.html
+++ b/templates/500.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Error 404{% endblock %}
-{% block content %}
-    <div class="container">
-        <div class="page-header">
-            <h1>500: Internal Server Error!</h1>
-        </div>
+{% block page_content %}
+    <div class="page-header">
+        <h1>500: Internal Server Error!</h1>
     </div>
 {% endblock %}
