--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 {% extends "bootstrap/base.html" %}
 {% include 'common.html' %}
+
 {% block head %}
     {{ super() }}
     <meta charset="UTF-8">
@@ -11,9 +12,7 @@
     <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
     <title>{% block title %}{% endblock %} - Learning Flask</title>
 {% endblock %}
-{% block scripts %}
-    {{ super() }}
-{% endblock %}
+
 {% block navbar %}
     <div class="navbar navbar-inverse" role="navigation">
       <div class="container">
@@ -24,16 +23,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Flasky</a>
+          <a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('index') }}">Home</a></li>
+                <li><a href="{{ url_for('main.index') }}">Home</a></li>
             </ul>
         </div>
       </div><!-- /.container -->
     </div><!-- /.navbar -->
 {% endblock %}
+
 {% block content %}
     <div class="container">
         {% for message in get_flashed_messages() %}
@@ -45,4 +45,9 @@
 
         {% block page_content %}{% endblock %}
     </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
 {% endblock %}
