--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Error 404{% endblock %}
+{% block title %}Flasky - Page Not Found{% endblock %}
 {% block page_content %}
     <div class="page-header">
         <h1>404: Page not Found!</h1>
