--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Error 404{% endblock %}
+{% block title %}Flasky - Internal Server Error{% endblock %}
 {% block page_content %}
     <div class="page-header">
-        <h1>500: Internal Server Error!</h1>
+        <h1>Error 500: Internal Server Error!</h1>
     </div>
 {% endblock %}
