--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -28,6 +28,8 @@
             <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">Edit Profile [Admin]</a>
             {% endif %}
         </p>
+        <h3>Posts by {{ user.username }}</h3>
+        {% include '_posts.html' %}
     </div>
 </div>
 {% endblock %}
